<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="Radius"
        android:textColor="#5066FF"
        app:layout_constraintBottom_toBottomOf="@+id/Radius"
        app:layout_constraintEnd_toStartOf="@+id/Radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Radius" />

    <EditText
        android:id="@+id/Radius"
        android:layout_width="272dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="km"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Longitude" />

    <EditText
        android:id="@+id/Longitude"
        android:layout_width="272dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Degrees"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Latitude" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="Latitude"
        android:textColor="#5066FF"
        app:layout_constraintBottom_toBottomOf="@+id/Latitude"
        app:layout_constraintEnd_toStartOf="@+id/Latitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Latitude"
        app:layout_constraintVertical_bias="0.636" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="Longitude"
        android:textColor="#5066FF"
        app:layout_constraintBottom_toBottomOf="@+id/Longitude"
        app:layout_constraintEnd_toStartOf="@+id/Longitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Longitude" />

    <EditText
        android:id="@+id/Latitude"
        android:layout_width="271dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Degrees"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCap2" />

    <TextView
        android:id="@+id/textCap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="20dp"
        android:text="Captions"
        android:textColor="#5066FF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EndDate" />

    <TextView
        android:id="@+id/textCap2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="20dp"
        android:text="Location"
        android:textColor="#5066FF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Caption" />

    <TextView
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="20dp"
        android:text="Time Window"
        android:textColor="#5066FF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/StartDate"
        android:layout_width="272dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="yyyyMMddHHmmss"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTime" />

    <EditText
        android:id="@+id/EndDate"
        android:layout_width="271dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="yyyyMMddHHmmss"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/StartDate"
        app:layout_constraintTop_toBottomOf="@+id/StartDate" />

    <EditText
        android:id="@+id/Caption"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="caption"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCap" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="Start Date TIme"
        android:textColor="#5066FF"
        app:layout_constraintBottom_toBottomOf="@+id/StartDate"
        app:layout_constraintEnd_toStartOf="@+id/StartDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/StartDate" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="End Date Time"
        android:textColor="#5066FF"
        app:layout_constraintBottom_toBottomOf="@+id/EndDate"
        app:layout_constraintEnd_toStartOf="@+id/EndDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/EndDate" />

    <Button
        android:id="@+id/Searchbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="Search"
        android:text="@android:string/search_go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Cancelbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:onClick="Cancel"
        android:text="@android:string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/Searchbutton"
        app:layout_constraintTop_toTopOf="@+id/Searchbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>