<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0C0C0C"
    android:backgroundTint="#1A1A1A"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivGallery"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_alignParentStart="true"

        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"


        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        android:maxWidth="300dp"
        android:maxHeight="300dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/btnSnap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="9dp"
        android:layout_toStartOf="@+id/Caption"
        android:backgroundTint="#413F3F"
        android:onClick="takePicture"
        android:text="snap"
        android:textColor="#FAE6E9EB" />

    <Button
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="#413F3F"
        android:onClick="moveLeft"
        android:text="Left"
        android:textColor="#FAE6E9EB" />

    <Button
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="#413F3F"
        android:onClick="moveRight"
        android:text="Right"
        android:textColor="#FAE6E9EB" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="9dp"
        android:layout_toEndOf="@+id/Caption"
        android:backgroundTint="#413F3F"
        android:onClick="SearchPicture"
        android:text="Search"
        android:textColor="#FAE6E9EB" />

    <Button
        android:id="@+id/Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="9dp"
        android:layout_toStartOf="@+id/right"
        android:layout_toEndOf="@+id/left"
        android:backgroundTint="#413F3F"
        android:onClick="Caption"
        android:text="caption"
        android:textColor="#FAE6E9EB" />

    <Button
        android:id="@+id/Upload"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="#413F3F"
        android:onClick="UploadPicture"
        android:text="Upload"
        android:textColor="#FAE6E9EB" />

    <TextView
        android:id="@+id/timeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/left"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="114dp"
        android:text="TimeStamp"
        android:textAlignment="center"
        android:textColor="#FAE6E9EB"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/captionText"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/left"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="71dp"
        android:text="Caption"
        android:textAlignment="center"
        android:textColor="#FAE6E9EB"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Lat"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/left"
        android:layout_alignParentStart="true"
        android:layout_marginStart="63dp"
        android:layout_marginBottom="16dp"
        android:text="Lat"
        android:textAlignment="center"
        android:textColor="#FAE6E9EB"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Lng"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/right"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="16dp"
        android:text="Lng"
        android:textAlignment="center"
        android:textColor="#FAE6E9EB"
        android:textStyle="bold" />

</RelativeLayout>